--- a/style.css
+++ b/style.css
@@ -36,6 +36,29 @@ html {
     margin: auto;
 }
 
+.title-section {
+    color:  #e67e22;
+    font-size: 2.5rem;
+    font-weight: 500;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.title-section::after {
+    content: "";
+    border: 2px solid #e67e22 ;
+    border-radius: 20%;
+    width: 130px;
+    color: #e67e22;
+    display: block;
+    clear: both;
+    margin: auto;
+    margin-bottom: 20px;
+}
+section {
+    padding: 50px;
+}
+
 /*----------------------------- HEADEING ---------------------------*/
 .header {
     position: relative;
@@ -98,5 +121,50 @@ html {
     letter-spacing: .2rem;
     line-height: 4rem;
     
+}
+
+/* ----------------------------- ABOUT SECTION --------------------------------------------- */
+.about-section .intro-section{
+    text-align: center;
+    width: 70%;
+    margin: auto;
+    color: #100457;
+    margin-bottom: 50px;
+    margin-top: 50px;
+}
+
+.about-section .about-picture {
+    position: relative;
+}
+.about-section .about-picture p{
+    color: #fff;
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    opacity: 0;
+}
+.about-section .about-picture img{
+    width: 90%;
+    margin-left: 5%;
+    border-radius: 10px;
+    border: 2px solid #92b9ec;
+    box-shadow: 5px 5px 15px #2d3e5e;
+}
+
+.about-section .about-picture:hover img,
+.about-section .about-picture:active img {
+    filter: brightness(60%) blur(2px);
+    transition: all .3s;
+}
+
+.about-section .about-picture:hover p,
+.about-section .about-picture:active p {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -25%);
+    transition: all .4s;
+    opacity: 1;
 }
 
