--- a/style.css
+++ b/style.css
@@ -168,3 +168,59 @@ section {
     opacity: 1;
 }
 
+/* ------------------------------ PRODUCTS -------------------------------------- */
+.product-section {
+    background-color: #f5f5f5;
+}
+
+.product-section .product-box .content{
+    background-color: #f6f6f6;
+    box-shadow: 1px 1px 15px 1px #ccc;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    text-align: center;
+    height: 20rem;
+    font-size: 1.4rem;
+    margin-top: 50px;
+    width: 95%;
+
+}
+
+
+
+.product-box p {
+    color: #3a66e0;
+    font-size: 2.2rem;
+    font-weight: 200;
+    margin: 20px 0px;
+}
+
+.product-box .price {
+    font-weight: 400;
+}
+
+.product-box ul {
+    list-style: none;
+    margin: 30px 0px;
+}
+.product-box li {
+    margin: 10px 0px;
+}
+
+.product-box i {
+    color: #3a66e0;
+    margin-right: 15px;
+}
+
+.product-box .btn {
+    margin-top: 40px;
+}
+
+.product-section .product-box h3 {
+    color: #fff;
+    background-color: #100457;
+    padding: 20px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+}
+
